--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,6 +8,7 @@
     --heading2: 45px;
     --heading3: 42px;
     --heading4: 38px;
+    --heading5: 32px;
     --text: 28px;
     --subtext1: 25px;
     --subtext2: 22px;
@@ -356,3 +357,118 @@ body{
 }
 
 /********************************************************************************************************************************/
+
+/* Portfolio */
+
+.portfolio-container-wrapper{
+    height: 100%;
+}
+
+.portfolio-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 1450px;
+    margin: 0 auto;
+}
+
+.portfolio-container-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 100px 50px 0px 50px;
+    margin: 0px 0px 50px 0px;
+}
+
+.portfolio-signature-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.portfolio-signature-container img{
+    width: 45px;
+    height: 25px;
+    margin-right: 15px;
+}
+
+.portfolio-signature-container span{
+    font-size: var(--subtext2);
+    color: var(--bg-secondary);
+    font-weight: bold;
+}
+
+.portfolio-signature-container a{
+    font-size: var(--subtext2);
+    color: var(--bg-secondary);
+    font-weight: bold;
+}
+
+.portfolio-signature-container a:hover{
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.portfolio-container-body{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px 50px 0px 50px;
+}
+
+.portfolio-container-about-cotainer-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.portfolio-container-about-header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0px 0px 30px 0px;
+}
+
+.portfolio-container-about-header span{
+    color: var(--bg-secondary);
+    font-size: var(--heading4);
+    font-weight: bold;
+}
+
+.portfolio-container-about-cotainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.portfolio-container-about-cotainer p{
+    color: rgba(64, 76, 103, 0.7);
+    font-size: var(--subtext3);
+    margin-top: 0px;
+}
+
+.web-link{
+    color: var(--secondary-color);
+    text-decoration: underline;
+}
+
+.web-link:hover{
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.portfolio-container-about-projects-container-wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.portfolio-container-about-projects-container{
+    height: 400px;
+    width: calc(33.3333333% - 50px);
+    background: black;
+    margin: 0px 50px 50px 0px;
+    border-radius: 10px;
+}
