--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -477,12 +477,160 @@ body{
 }
 
 .portfolio-container-about-projects-container{
-    height: 350px;
-    width: calc(33.3333333% - 50px);
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: calc(28% - 50px);
+    padding: 30px;
     background: var(--primary);
     margin: 0px 50px 50px 0px;
+    transition: transform 0.3s ease;
 }
 
 .portfolio-container-about-projects-container:hover{
-    transform: scale(1.05);
+    opacity: 0.5;
+    transform: scale(1.03);
+    cursor: pointer;
+}
+
+.portfolio-container-about-projects-container span{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    font-size: var(--subtext2);
+    font-weight: bold;
+    color: #FFFFFF;
+    overflow-wrap: break-word;
+}
+
+.portfolio-container-about-project-img-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio-container-about-project-img-container img{
+    width: 60%;
+    height: 60%;
+    object-fit: contain;
+}
+
+.portfolio-container-project-header-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0px 0px 50px 0px;
+}
+
+.portfolio-container-project-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px;
+    margin: 0px 0px 30px 0px;
+}
+
+.portfolio-container-project-header span{
+    color: white;
+    font-size: var(--heading5);
+    font-weight: bold;
+}
+
+@media screen and (min-width: 0px){
+
+    .portfolio-signature-container img{
+        width: 40px;
+        height: 20px;
+    }
+
+    .portfolio-signature-container span{
+        font-size: var(--subtext4);
+    }
+
+    .portfolio-container-about-header span{
+        font-size: var(--subtext1);
+    }
+
+    .portfolio-container-about-cotainer p{
+        font-size: var(--subtext5);
+    }
+
+    .portfolio-container-about-projects-container{
+        height: 220px;
+        width: calc(100% - 50px);
+        margin: 0px 0px 50px 0px;
+    }
+
+    .portfolio-container-about-projects-container span{
+        font-size: var(--subtext4);
+    }
+
+    .portfolio-container-about-project-img-container img{
+        width: 50%;
+        height: 50%;
+        object-fit: contain;
+    }
+}
+
+@media screen and (min-width: 800px){
+
+    .portfolio-signature-container img{
+        width: 45px;
+        height: 25px;
+    }
+
+    .portfolio-signature-container span{
+        font-size: var(--subtext2);
+    }
+
+    .portfolio-container-about-header span{
+        font-size: var(--heading5);
+    }
+
+    .portfolio-container-about-cotainer p{
+        font-size: var(--subtext4);
+    }
+
+    .portfolio-container-about-projects-container{
+        height: 300px;
+        width: calc(50% - 100px);
+        margin: 0px 50px 50px 0px;
+    }
+
+    .portfolio-container-about-projects-container:nth-of-type(2n){
+        margin: 0px 0px 50px 0px;
+    }
+
+    .portfolio-container-about-projects-container span{
+        font-size: var(--subtext2);
+    }
+
+    .portfolio-container-about-project-img-container img{
+        width: 60%;
+        height: 60%;
+        object-fit: contain;
+    }
+}
+
+@media screen and (min-width: 1200px){
+
+    .portfolio-container-about-cotainer p{
+        font-size: var(--subtext3);
+    }
+
+    .portfolio-container-about-projects-container{
+        width: calc(33.3333333% - 100px);
+        margin: 0px 50px 50px 0px;
+    }
+
+    .portfolio-container-about-projects-container:nth-of-type(2n){
+        margin: 0px 50px 50px 0px;
+    }
+
+    .portfolio-container-about-projects-container:nth-of-type(3n){
+        margin: 0px 0px 50px 0px;
+    }
 }
