--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -385,8 +385,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 50px 50px 0px 50px;
-    margin: 0px 0px 50px 0px;
+    margin: 50px;
 }
 
 .portfolio-signature-container{
@@ -422,7 +421,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px 50px 0px 50px;
+    margin: 0px 50px 0px 50px;
 }
 
 .portfolio-container-about-cotainer-wrapper{
