--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -394,6 +394,11 @@ body{
     align-items: center;
 }
 
+.portfolio-signature-container:hover{
+    opacity: 0.7;
+    cursor: pointer;
+}
+
 .portfolio-signature-container img{
     width: 45px;
     height: 25px;
@@ -747,6 +752,36 @@ body{
     color: var(--secondary-color);
 }
 
+.portfolio-container-project-btn-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin: 50px 0px;
+}
+
+.portfolio-container-project-btn-container button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 20px;
+    background: var(--secondary-color);
+    font-weight: bold;
+    font-size: var(--subtext1);
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+}
+
+.portfolio-container-project-btn-container button:hover{
+    background: white;
+    color: var(--primary);
+    cursor: pointer;
+}
+
+
 /********************************************************************************************************************************/
 
 @media screen and (min-width: 0px){
@@ -778,6 +813,14 @@ body{
     .portfolio-container-project-description-container a{
         font-size: var(--subtext5);
     }
+
+    .portfolio-container-project-btn-container{
+        margin-bottom: 100px;
+    }
+    
+    .portfolio-container-project-btn-container button{
+        font-size: var(--subtext3);
+    }
 }
 
 @media screen and (min-width: 800px){
@@ -808,6 +851,14 @@ body{
 
     .portfolio-container-project-description-container a{
         font-size: var(--subtext4);
+    }
+
+    .portfolio-container-project-btn-container{
+        margin-bottom: 50px;
+    }
+
+    .portfolio-container-project-btn-container button{
+        font-size: var(--subtext1);
     }
 }
 
